3 Iun 2019
* Fix: The attribute for electronic signing cannot be combined with other services in Php iDIN Libraries

---------------------------------------------------------------------------------------------------------------------------------------------
3 aug 2018
* Add Signing Service

---------------------------------------------------------------------------------------------------------------------------------------------
2 Apr 2018
* Remove loa2
* Consumer Initials: accept ligatures and digraphs
* Fix URL validation in PHP library

---------------------------------------------------------------------------------------------------------------------------------------------
2 Nov 2017
* Resolve "Problem with & from MerchantReturnURL"

---------------------------------------------------------------------------------------------------------------------------------------------
25 sept 2017
* adjust CA path

---------------------------------------------------------------------------------------------------------------------------------------------
22 Sept 2017
* namespaces fixes

---------------------------------------------------------------------------------------------------------------------------------------------
18 Sept 2017
* namespaces fixes

---------------------------------------------------------------------------------------------------------------------------------------------
7 September 2017
* Add Logging

---------------------------------------------------------------------------------------------------------------------------------------------
8 August 2017
* Adjust validation rules

---------------------------------------------------------------------------------------------------------------------------------------------
10 May 2017
* Add alternative routing service certificate

---------------------------------------------------------------------------------------------------------------------------------------------
10 March 2017
